force-app/main/default/objects/SDOC__SDRelationship__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>S-Docs Relationships</relationshipLabel>
    <relationshipName>S_Docs_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>