force-app/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Product__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>S-Docs</relationshipLabel>
    <relationshipName>SDoc_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>